# Orchestrator

./: .gitignore  README.md  README.pt-BR.md  TUTORIAL.md  dev.bat  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: napkin.md
_templates_personas/: README.md  persona-arquiteto.md  persona-cybersec.md  persona-inovacao.md  persona-principal.md
_templates_personas/ralph-loop/: README.md  claude-md-section.md  prd-template.json  progress-template.txt  ralph.sh
electron/: log.ts  main.ts  preload.ts  tsconfig.json  types.ts
electron/ipc/: handlers.ts
electron/services/: CodeServerService.ts  ContextService.ts  FileSystemService.ts  MonitorService.ts  PersistenceService.ts  PersonaArchitectService.ts  ProxyService.ts  PtyService.ts  SupervisorService.ts  TranslatorService.ts  VaultService.ts
src/: App.tsx  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/code_server/: commands.rs  mod.rs  models.rs  services.rs
src-tauri/src/context/: commands.rs  mod.rs  models.rs  services.rs
src-tauri/src/persistence/: commands.rs  mod.rs  models.rs  services.rs
src-tauri/src/pty/: commands.rs  mod.rs  models.rs  services.rs
src-tauri/src/supervisor/: commands.rs  mod.rs  services.rs
src-tauri/src/translator/: commands.rs  mod.rs  models.rs  services.rs
src-tauri/src/vault/: commands.rs  models.rs  services.rs
src/components/: BootScreen.tsx  Canvas.tsx  CommandPalette.tsx  FileExplorer.tsx  FileIcon.tsx  (+9 more)
(+40 files in other folders)
